--- a/ImageSorter.csproj
+++ b/ImageSorter.csproj
@@ -4,7 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
-    <ApplicationIcon>Data Juggler.ico</ApplicationIcon>
+    <ApplicationIcon>ColorWheel.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
