--- a/ImageSorter.csproj
+++ b/ImageSorter.csproj
@@ -2,14 +2,15 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>ColorWheel.ico</ApplicationIcon>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DataJuggler.PixelDatabase" Version="5.1.6" />
-    <PackageReference Include="DataJuggler.Win.Controls" Version="5.8.2" />
+    <PackageReference Include="DataJuggler.PixelDatabase" Version="6.2.1" />
+    <PackageReference Include="DataJuggler.Win.Controls" Version="6.2.4" />
   </ItemGroup>
 
 </Project>
